# client

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  README.zh.md  compose.yml  deny.toml  diesel.toml  justfile  official_selectors.json  presets.json  rustfmt.toml  savhub.toml  typos.toml
.github/workflows/: ci.yml  docker.yml  release.yml
cli/: Cargo.toml  README.md
cli/src/: api.rs  clients.rs  config.rs  main.rs  skills.rs  tui.rs
client/cli/: Cargo.toml  README.md
client/cli/src/: api.rs  main.rs  skills.rs  tui.rs  updater.rs
client/desktop/: Cargo.toml  README.md
client/desktop/src/: api.rs  i18n.rs  main.rs  skills.rs  state.rs  theme.rs  updater.rs  watcher.rs
client/desktop/src/components/: copy_sign.rs  mod.rs  pagination.rs  security_badge.rs
client/desktop/src/pages/: dashboard.rs  detail.rs  explore.rs  fetched.rs  flock_detail.rs  mod.rs  profiles.rs  selectors.rs  settings.rs
client/local/: Cargo.toml  build.rs
client/local/src/: api.rs  clients.rs  config.rs  lib.rs  pilot.rs  presets.rs  registry.rs  selectors.rs  skills.rs
desktop/: Cargo.toml  README.md  build.rs
desktop/src/: api.rs  i18n.rs  icons.rs  main.rs  skills.rs  state.rs  updater.rs  watcher.rs
desktop/src/components/: click_guard.rs  copy_sign.rs  mod.rs  pagination.rs  view_toggle.rs
desktop/src/pages/: dashboard.rs  detail.rs  detectors.rs  explore.rs  fetched.rs  flock_detail.rs  installed.rs  mcp.rs  mod.rs  profiles.rs  selectors.rs  settings.rs
docs/en/: index.md
docs/en/client/: _meta.json  apply.md  cli-reference.md  configuration.md  flocks.md  presets.md  selectors.md
docs/en/developer/: _meta.json  ai-metadata.md  api.md  deployment.md  index-rules.md  registry-git.md  scan-grouping.md
docs/en/getting-started/: _meta.json  concepts.md  quick-start.md
docs/refactors/: B1-token-hashing.md  C1-split-index-jobs.md  C2-async-db.md  C3-ws-reconnect.md  D2-my-center.md  D5-custom-selector-ui.md
docs/zh/: _meta.json  index.md
docs/zh/client/: _meta.json  apply.md  cli-reference.md  configuration.md  flocks.md  presets.md  selectors.md
docs/zh/developer/: ai-metadata.md  api.md  deployment.md  index-rules.md  registry-git.md  scan-grouping.md
docs/zh/getting-started/: concepts.md  quick-start.md
local/src/: clients.rs  config.rs  pilot.rs  presets.rs  skills.rs
mcp-server/: Cargo.toml
mcp-server/src/: handler.rs  main.rs  protocol.rs  transport.rs
scripts/: install.ps1  install.sh
server/backend/: Cargo.toml
server/backend/migrations/2026-03-10-000001_init/: down.sql  up.sql
server/backend/migrations/2026-03-16-000001_cascade_flock_repo_fks/: down.sql
server/backend/migrations/2026-03-16-000002_add_install_tracking/: down.sql  up.sql
server/backend/migrations/2026-03-19-000001_security_scan_version_binding/: up.sql
server/backend/migrations/2026-03-19-000002_ai_usage_tracking/: down.sql  up.sql
server/backend/migrations/2026-03-19-000003_repo_keywords/: down.sql
server/backend/migrations/2026-03-19-000004_ai_request_cache/: up.sql
server/backend/migrations/2026-03-21-000002_drop_registry_git_sync_columns/: down.sql  up.sql
server/backend/migrations/2026-03-22-000001_add_version_scan_summary/: down.sql  up.sql
server/backend/migrations/2026-03-23-000003_security_scan_queue_commit_history/: down.sql  up.sql
server/backend/migrations/2026-03-23-000004_drop_security_scan_queue/: down.sql  up.sql
server/backend/migrations/2026-03-23-000005_add_flocks_soft_deleted_at/: down.sql  up.sql
server/backend/migrations/2026-03-23-000006_flocks_path_not_null/: down.sql  up.sql
server/backend/migrations/2026-03-24-000007_pending_index_repos/: down.sql  up.sql
server/backend/migrations/2026-03-26-000008_user_custom_selectors/: down.sql  up.sql
server/backend/migrations/2026-04-07-000009_user_tokens_hash/: down.sql  up.sql
server/backend/src/: auth.rs  config.rs  db.rs  docs.rs  error.rs  main.rs  models.rs  routing.rs  schema.rs  state.rs  worker.rs
server/backend/src/service/: admin.rs  ai.rs  async_db.rs  blocks.rs  browse_history.rs  catalog.rs  custom_selectors.rs  git_ops.rs  github_auth.rs  helpers.rs  index.rs  index_jobs.rs  index_rules.rs  index_rules_admin.rs  interactions.rs  llm_eval.rs  mod.rs  official_selectors.rs  presets.rs  registry_sync.rs  reports.rs  repos.rs  security.rs  security_scan.rs  site_admins.rs  upgrade.rs  users.rs
server/backend/src/service/index_jobs/: discovery.rs  mod.rs
server/frontend/src/: api.rs  app.rs  i18n.rs  icons.rs  style.css
server/migrations/2026-03-10-000001_init/: down.sql  up.sql
server/migrations/2026-03-16-000001_cascade_flock_repo_fks/: up.sql
server/migrations/2026-03-18-000001_rename_path_pattern_to_path_regex/: down.sql  up.sql
server/migrations/2026-03-19-000001_security_scan_version_binding/: down.sql
server/migrations/2026-03-19-000003_repo_keywords/: up.sql
server/migrations/2026-03-19-000004_ai_request_cache/: down.sql
server/src/: auth.rs  docs.rs  lib.rs  main.rs  markdown.rs  models.rs  routing.rs  seed.rs
server/src/service/: ai.rs  blocks.rs  browse_history.rs  catalog.rs  github_auth.rs  helpers.rs  index.rs  index_jobs.rs  index_rules_admin.rs  llm_eval.rs  mod.rs  reports.rs  repos.rs  security.rs  security_scan.rs  site_admins.rs  users.rs
shared/: Cargo.toml  build.rs
shared/src/: build_info.rs  bundle_meta.rs  catalog.rs  client.rs  clients.rs  config.rs  kdl_support.rs  lib.rs  mcp_config.rs  pilot.rs  presets.rs  registry.rs  selectors.rs  skills.rs  utils.rs
skills/savhub-cli/: SKILL.md
skills/savhub-config/: SKILL.md
skills/savhub-pilot/: SKILL.md
skills/savhub-selector-editor/: SKILL.md
skills/savhub-skill-manager/: SKILL.md
web/: Cargo.toml  Dioxus.toml
web/src/: api.rs  app.rs  i18n.rs  main.rs  style.css
~/.savhub-dev/: .config-changed  selectors.json
