[workspace]
members = ["cli", "desktop", "shared", "mcp-server"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
version = "0.1.1"
rust-version = "1.94"

[workspace.dependencies]
savhub-local = { path = "shared" }
savhub-shared = { version = "0.1.0", git = "https://github.com/savhub-ai/server.git", package = "savhub-shared" }

anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["clock", "serde"] }
clap = { version = "4.6.0", features = ["derive", "env"] }
crossterm = "0.29.0"
dialoguer = "0.12.0"
directories = "6.0.0"
dioxus = "0.7.3"
dioxus-router = "0.7.3"
flate2 = "1.1.9"
ratatui = "0.30.0"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
self_update_tar = { package = "tar", version = "0.4.44" }
semver = { version = "1.0.27", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
toml = "0.9.8"
tokio = { version = "1.50.0", features = ["full"] }
walkdir = "2.5.0"
zip = { version = "8.2.0", default-features = false, features = ["deflate"] }

