[workspace]
members = ["server/backend", "server/frontend", "shared", "client/cli", "client/desktop", "client/local"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
version = "0.1.22"
rust-version = "1.94"

[workspace.dependencies]
savhub-shared = { version = "0.1.0", path = "shared" }
savhub-local = { path = "client/local" }

# -- Shared across server & client --
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["clock", "serde"] }
clap = { version = "4.6.0", features = ["derive", "env"] }
dialoguer = "0.12.0"
directories = "6.0.0"
dioxus = "0.7.5"
dioxus-router = "0.7.4"
regex = "1.12.3"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
semver = { version = "1.0.27", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
tokio = { version = "1.51.1", features = ["full"] }
toml = "1.1.0"
uuid = { version = "1.23.0", features = ["serde", "v4", "v7", "js"] }
walkdir = "2.5.0"
zip = { version = "8.5.1", default-features = false, features = ["deflate"] }

# -- Server-only --
ammonia = "4.1.2"
base64 = "0.22.1"
diesel = { version = "2.3.7", features = [
    "postgres", "r2d2", "chrono", "uuid", "serde_json", "64-column-tables",
] }
# C2 phase 0: introduce diesel-async + bb8 alongside the existing sync stack.
# Modules will be ported to AsyncPgConnection one at a time; both pools live
# in app_state until the migration is complete.
diesel-async = { version = "0.7", features = ["postgres", "bb8"] }
diesel_migrations = "2.3.1"
dotenvy = "0.15.7"
futures-util = "0.3.32"
indexmap = { version = "2.14.0", features = ["serde"] }
novel-core = { git = "https://github.com/taidge/novel.git", branch = "main" }
novel-shared = { git = "https://github.com/taidge/novel.git", branch = "main" }
once_cell = "1.21.4"
pq-sys = { version = "0.7.5", features = ["bundled"] }
pulldown-cmark = "0.13.3"
rust-embed = { version = "8.11.0", features = ["interpolate-folder-path"] }
salvo = { version = "0.91.1", features = ["cors", "websocket", "serve-static"] }
serde-saphyr = "0.0.23"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }

# -- Web frontend --
gloo-timers = { version = "0.4.0", features = ["futures"] }
wasm-bindgen = "0.2.117"
wasm-bindgen-futures = "0.4.67"
web-sys = { version = "0.3.91", features = ["Window", "Location", "Storage", "History", "WebSocket", "MessageEvent", "Navigator", "Clipboard"] }

# -- Client-only --
arboard = "3.6.1"
crossterm = "0.29.0"
flate2 = "1.1.9"
image = { version = "0.25.10", default-features = false, features = ["png"] }
ratatui = "0.30.0"
rfd = "0.17.2"
self_update_tar = { package = "tar", version = "0.4.45" }
winresource = "0.1.31"
