[package]
name = "savhub-desktop"
description = "Desktop client for the Savhub registry"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dioxus = { workspace = true, features = ["desktop", "router"] }
image = { version = "0.25", default-features = false, features = ["png"] }
reqwest.workspace = true
savhub-local.workspace = true
savhub-shared.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
chrono.workspace = true
directories.workspace = true
tokio = { workspace = true }
zip.workspace = true
semver.workspace = true
flate2.workspace = true
self_update_tar.workspace = true
rfd = "0.17.2"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
