[package]
name = "savhub-mcp"
description = "MCP server for dynamic AI skills via savhub"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "savhub-mcp"
path = "src/main.rs"

[dependencies]
savhub-local = { path = "../shared" }
savhub-shared.workspace = true
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
