[package]
name = "savhub-local"
description = "Shared logic for savhub CLI, desktop, and MCP server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
savhub-shared.workspace = true
anyhow.workspace = true
chrono.workspace = true
directories.workspace = true
serde.workspace = true
serde_json.workspace = true
kdl.workspace = true
toml.workspace = true
rusqlite.workspace = true
sha2.workspace = true
regex.workspace = true
walkdir.workspace = true
zip.workspace = true
