[package]
name = "savhub-shared"
description = "Shared types and DTOs for the Savhub decentralized skills registry"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
indexmap.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
uuid.workspace = true
