[package]
name = "savhub-frontend"
description = "Web frontend for the Savhub decentralized skills registry"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
dioxus = { workspace = true, features = ["web"] }
dioxus-router.workspace = true
gloo-timers.workspace = true
reqwest.workspace = true
savhub-shared.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys.workspace = true
