[package]
name = "savhub-desktop"
description = "Desktop client for the Savhub registry"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dioxus = { workspace = true, features = ["desktop", "router"] }
image.workspace = true
reqwest.workspace = true
savhub-local.workspace = true
savhub-shared.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
directories.workspace = true
tokio = { workspace = true }
zip.workspace = true
semver.workspace = true
flate2.workspace = true
self_update_tar.workspace = true
rfd.workspace = true
arboard.workspace = true

[target.'cfg(windows)'.build-dependencies]
winresource.workspace = true
